--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="/src/index.js"></script>
     <script src="/src/ch04.js"></script>
   </body>
 </html>
